--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ footer p { margin: 0 10px; font-size: 18px }
 .vpnum { font-feature-settings: 'pnum'; }
 .vss01 { font-feature-settings: 'ss01'; }
 .vss02 { font-feature-settings: 'ss02'; }
-.vss10 { font-feature-settings: 'ss10'; }
+.vss03 { font-feature-settings: 'ss03'; }
 
 .vario { text-align: center; font-size: 40px; line-height: 2em; animation: variabile 4000ms infinite both; }
 .vario:hover { animation-play-state: paused; }
@@ -275,6 +275,36 @@ div.side {width: 249px; margin: 30px 0 0; padding:10px 10px 5px; float:left; bor
 				<tr>
 				<tr>
 					<td colspan="5" class="codice">font-feature-settings: 'pnum';</td>
+				</tr>
+				<tr>
+					<td class="feat">'ss01'</td>
+					<td>a à á â ã ä å ā ă ą ǻ ȁ ȃ ạ ả ấ ầ ẩ ẫ ậ ắ ằ ẳ ẵ ặ</td>
+					<td class="legg">→</td>
+					<td class="vss01">a à á â ã ä å ā ă ą ǻ ȁ ȃ ạ ả ấ ầ ẩ ẫ ậ ắ ằ ẳ ẵ ặ</td>
+					<td class="vss01"><i>a à á â ã ä å ā ă ą ǻ ȁ ȃ ạ ả ấ ầ ẩ ẫ ậ ắ ằ ẳ ẵ ặ</i></td>
+				<tr>
+				<tr>
+					<td colspan="5" class="codice">font-feature-settings: 'ss01';</td>
+				</tr>
+				<tr>
+					<td class="feat">'ss02'</td>
+					<td>g ĝ ğ ġ ģ</td>
+					<td class="legg">→</td>
+					<td class="vss02">g ĝ ğ ġ ģ</td>
+					<td class="vss02"><i>g ĝ ğ ġ ģ</i></td>
+				<tr>
+				<tr>
+					<td colspan="5" class="codice">font-feature-settings: 'ss02';</td>
+				</tr>
+				<tr>
+					<td class="feat">'ss03'</td>
+					<td>l ĺ ļ ľ ŀ ł</td>
+					<td class="legg">→</td>
+					<td class="vss03">l ĺ ļ ľ ŀ ł</td>
+					<td class="vss03"><i>l ĺ ļ ľ ŀ ł</i></td>
+				<tr>
+				<tr>
+					<td colspan="5" class="codice">font-feature-settings: 'ss03';</td>
 				</tr>
 			</table>
 
