--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ div.side {width: 249px; margin: 30px 0 0; padding:10px 10px 5px; float:left; bor
 			
 			<h3>Descrizione</h3>
 			
-			<p><i>Public Sans</i> è un font realizzato da U.S. Web Design System e distribuito con licenza OFL 1.1<a class="ref" id="nt-2" href="#ref-2">[2]</a>; è derivato da <i>Libre Franklin</i> di Pablo Impallari<a class="ref" id="nt-3" href="#ref-3">[3]</a>.</p>
+			<p><i>Public Sans</i> è un font realizzato da U.S. Web Design System e distribuito con licenza OFL 1.1<a class="ref" id="nt-2" href="#ref-2">[2]</a>; è derivato da <i>Libre Franklin</i> di Pablo Impallari e Rodrigo Fuenzalida<a class="ref" id="nt-3" href="#ref-3">[3]</a>.</p>
 			<p>Il font variabile <i>Publica Ignominia</i> è una variazione del font <i>Public Sans</i>.</p>
 			<p class="vario">Publica Ignominia Variabile</p>
 			<p>Tabella delle variazioni di <i>Publica Ignominia</i>.</p>
