--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ footer p { margin: 0 10px; font-size: 18px }
 .vsubs { font-feature-settings: 'subs'; }
 .vfrac { font-feature-settings: 'frac'; }
 .vpnum { font-feature-settings: 'pnum'; }
+.vzero { font-feature-settings: 'zero'; }
 .vss01 { font-feature-settings: 'ss01'; }
 .vss02 { font-feature-settings: 'ss02'; }
 .vss03 { font-feature-settings: 'ss03'; }
@@ -275,6 +276,16 @@ div.side {width: 249px; margin: 30px 0 0; padding:10px 10px 5px; float:left; bor
 				<tr>
 				<tr>
 					<td colspan="5" class="codice">font-feature-settings: 'pnum';</td>
+				</tr>
+				<tr>
+					<td class="feat">'zero'</td>
+					<td>0</td>
+					<td class="legg">→</td>
+					<td class="vzero">0</td>
+					<td class="vzero"><i>0</i></td>
+				<tr>
+				<tr>
+					<td colspan="5" class="codice">font-feature-settings: 'zero';</td>
 				</tr>
 				<tr>
 					<td class="feat">'ss01'</td>
